# grantkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.beads/: issues.jsonl
.claude/agents/: grant-reviewer.md  grant-writer.md
.claude/commands/: grant-status.md  simulate-review.md
.claude/skills/nsf-review/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CNAME  _config.yml  api-reference.md  artifacts.md  getting-started.md  index.md  landscape.md  mcp-and-ci.md  myst.yml  packs.md
docs/cli/: budget.md  build.md  check.md  overview.md  sync.md  validation.md
docs/features/: citations.md  pdf-generation.md  salary-validation.md  travel-per-diem.md
examples/raf-rfi/: grant.yaml
examples/raf-rfi/responses/: about.md  cost_timeline.md  partnership.md  perspective.md
examples/sample-nsf-grant/: README.md  budget.yaml  grant.yaml
examples/sample-nsf-grant/responses/: broader_impacts.md  project_description.md  project_summary.md  references.md
grantkit/: __init__.py  auth.py  cli.py  compat.py  mcp_server.py  sync.py  sync_plan.py  sync_state.py
grantkit/budget/: __init__.py  calculator.py  manager.py  salary_validator.py
grantkit/commands/: __init__.py  auth.py  budget.py  build.py  pdf.py  project.py  references.py  sync.py
grantkit/core/: __init__.py  assembler.py  builder.py  checks.py  markdown_validator.py  project.py  review.py  scaffold.py  spelling.py  status.py  validator.py
grantkit/data/funders/: nsf-pappg.yaml  nuffield-rda.yaml  pbif.yaml
grantkit/funders/nsf/programs/: __init__.py  registry.py
grantkit/packs/: __init__.py  registry.py  schema.py
grantkit/pdf/: __init__.py  config.py  generator.py  optimizer.py  templates.py  validator.py
grantkit/references/: __init__.py  bibliography_generator.py  bibtex_manager.py  citation_extractor.py  config.py  nsf_styles.py
grantkit/utils/: __init__.py  io.py  nsf_rules.py  text.py
nsf-cssi-elements/: grant.yaml
nsf-cssi-elements/responses/: budget_justification.md  data_management_plan.md  delivery_metrics.md  facilities_resources.md  personnel_organizations.md  project_description.md  project_summary.md
supabase/: config.toml
supabase/migrations/: 20251125000000_initial_schema.sql  20251125010000_policyengine_access.sql  20251125020000_add_nested_fields.sql  20251125030000_public_access.sql  20251125040000_public_share_links.sql  20251125050000_internal_documents.sql  20251126000000_fix_rls_security.sql  20251126010000_waitlist_table.sql  20251126020000_device_auth.sql  20251127000000_add_archive_support.sql  20260108000000_unified_schema.sql  20260114000000_add_accepts_markdown.sql  20260115000000_add_bibliography.sql  20260115100000_add_response_sort_order.sql  20260115200000_add_display_year.sql  20260418000000_ensure_updated_at_triggers.sql
tests/: __init__.py  conftest.py  test_assembler.py  test_auth.py  test_bibtex_manager.py  test_budget_calculator.py  test_budget_manager.py  test_builder.py  test_checks.py  test_cli.py  test_core.py  test_markdown_validator.py  test_mcp.py  test_packs.py  test_review.py  test_salary_validator.py  test_scaffold.py  test_share.py  test_status.py  test_sync.py  test_sync_cli.py  test_sync_state.py  test_validator.py
