[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grantkit"
version = "0.2.0"
description = "The linter and compiler for grant proposals — grants as files, agents bring the AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"}
]
keywords = [
    "grant",
    "proposal",
    "nsf",
    "research",
    "funding",
    "academic",
    "linter",
    "validation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "bibtexparser>=1.4",
    "beautifulsoup4>=4.12",
    "markdown>=3.5",
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",
    "pypdf>=4.0",
]
docx = [
    "python-docx>=1.0",
]
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.0",
    "python-docx>=1.0",
]
all = [
    "grantkit[pdf,docx,mcp]",
]

[project.scripts]
grantkit = "grantkit.cli:main"
grantkit-mcp = "grantkit.mcp_server:main"

[project.urls]
Homepage = "https://grantkit.io"
Documentation = "https://docs.grantkit.io"
Repository = "https://github.com/GrantKit/grantkit"
Issues = "https://github.com/GrantKit/grantkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["grantkit*"]

[tool.setuptools.package-data]
grantkit = ["data/*.yaml", "data/funders/*.yaml", "templates/*"]

[tool.black]
line-length = 79
target-version = ["py312", "py313"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
